// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

// ----------------------------------------------------------------------------
// Enums
// ----------------------------------------------------------------------------

// RBAC roles used inside a project
enum Role {
  admin
  tester
  viewer
}

// HTTP methods supported for endpoints / test cases
enum HttpMethod {
  GET
  POST
  PUT
  PATCH
  DELETE
}

// Lifecycle of a test run. TestSuite IS the run record, so this tracks the
// async job from creation through completion.
enum SuiteStatus {
  pending
  running
  completed
  failed
}

// Lifecycle of an email invitation to join a project.
enum InvitationStatus {
  pending
  accepted
  declined
  expired
}

// ----------------------------------------------------------------------------
// User model — owns credentials for the AutoRestTest platform
// ----------------------------------------------------------------------------
model User {
  id        String   @id @default(uuid())
  username  String   @unique
  email     String   @unique
  password  String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Projects the user owns
  ownedProjects Project[] @relation("OwnedProjects")

  // Project memberships for collaboration
  projectMembers ProjectMember[]

  // Test runs the user has triggered
  triggeredSuites TestSuite[] @relation("TriggeredSuites")

  // Invitations this user has sent to others
  sentInvitations ProjectInvitation[] @relation("SentInvitations")

  @@map("users")
}

// ----------------------------------------------------------------------------
// Project model — main workspace container in AutoRestTest.
// Everything else (API spec, endpoints, test suites, test cases) lives
// inside a project.
// ----------------------------------------------------------------------------
model Project {
  id          String  @id @default(uuid())
  name        String
  description String?

  // Ownership
  ownerId String
  owner   User   @relation("OwnedProjects", fields: [ownerId], references: [id])

  // Team collaboration
  members     ProjectMember[]
  invitations ProjectInvitation[]

  // Testing artifacts
  spec       ApiSpecification?
  endpoints  Endpoint[]
  testSuites TestSuite[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([ownerId])
  @@map("projects")
}

// ----------------------------------------------------------------------------
// ProjectMember model — links a User to a Project with a Role.
// Cascade-deletes with the parent project so cleanup is automatic.
// ----------------------------------------------------------------------------
model ProjectMember {
  id        String   @id @default(uuid())
  projectId String
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  role      Role
  joinedAt  DateTime @default(now())

  @@unique([projectId, userId])
  @@index([userId])
  @@map("project_members")
}

// ----------------------------------------------------------------------------
// ProjectInvitation model — pending email invite to join a project.
// The invitee may not have an account yet, so the invite is keyed by email
// and carries a unique token used in the accept link. Becomes a
// ProjectMember once accepted.
// ----------------------------------------------------------------------------
model ProjectInvitation {
  id        String           @id @default(uuid())
  projectId String
  project   Project          @relation(fields: [projectId], references: [id], onDelete: Cascade)
  email     String
  role      Role
  token     String           @unique
  status    InvitationStatus @default(pending)

  invitedById String
  invitedBy   User   @relation("SentInvitations", fields: [invitedById], references: [id])

  expiresAt DateTime
  createdAt DateTime @default(now())

  // Only one outstanding invite per email per project.
  @@unique([projectId, email])
  @@index([email])
  @@map("project_invitations")
}

// ----------------------------------------------------------------------------
// ApiSpecification model — the OpenAPI 3.0 spec for a project (one per
// project). Raw YAML is stored as text; this is what gets handed to the
// testing engine. generatedByAI flags specs produced from source code.
// ----------------------------------------------------------------------------
model ApiSpecification {
  id            String   @id @default(uuid())
  projectId     String   @unique
  project       Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  fileName      String
  fileContent   String // raw OAS 3.0 YAML
  generatedByAI Boolean  @default(false)
  uploadedAt    DateTime @default(now())

  @@map("api_specifications")
}

// ----------------------------------------------------------------------------
// Endpoint model — a single path+method extracted from the spec (or added
// manually). Stored so the UI can list detected endpoints, filter results,
// and support manual additions.
// ----------------------------------------------------------------------------
model Endpoint {
  id            String     @id @default(uuid())
  projectId     String
  project       Project    @relation(fields: [projectId], references: [id], onDelete: Cascade)
  path          String // e.g. /users/{id}
  method        HttpMethod
  description   String?
  addedManually Boolean    @default(false)
  createdAt     DateTime   @default(now())

  testCases   TestCase[]
  requestLogs RequestLog[]

  @@unique([projectId, method, path])
  @@index([projectId])
  @@map("endpoints")
}

// ----------------------------------------------------------------------------
// TestSuite model — IS the test run record (one row per execution). The run
// configuration (targetUrl / timeBudget / mutationRate) mirrors the engine
// inputs; the count fields are populated from the engine's report on
// completion. jobId links to the async Flask job for polling.
// ----------------------------------------------------------------------------
model TestSuite {
  id        String      @id @default(uuid())
  projectId String
  project   Project     @relation(fields: [projectId], references: [id], onDelete: Cascade)
  name      String?
  status    SuiteStatus @default(pending)
  jobId     String? // Flask async job id

  // Run configuration — passed to the engine
  targetUrl    String
  timeBudget   Int // engine time_duration, in seconds
  mutationRate Float  @default(0.2)

  // Results summary — filled from the engine report
  totalEndpoints   Int @default(0)
  coveredEndpoints Int @default(0)
  totalTestCases   Int @default(0)
  passedTestCases  Int @default(0)
  failedTestCases  Int @default(0)

  triggeredById String
  triggeredBy   User   @relation("TriggeredSuites", fields: [triggeredById], references: [id])

  startedAt   DateTime?
  completedAt DateTime?
  createdAt   DateTime  @default(now())

  testCases   TestCase[]
  requestLogs RequestLog[]

  @@index([projectId])
  @@map("test_suites")
}

// ----------------------------------------------------------------------------
// TestCase model — one request/response record produced during a run,
// derived from the engine's output JSON. Stores the request that was sent
// and the response received, plus an optional plain-language failure note.
// ----------------------------------------------------------------------------
model TestCase {
  id          String    @id @default(uuid())
  testSuiteId String
  testSuite   TestSuite @relation(fields: [testSuiteId], references: [id], onDelete: Cascade)
  endpointId  String
  endpoint    Endpoint  @relation(fields: [endpointId], references: [id], onDelete: Cascade)

  requestBody    Json?
  requestHeaders Json?
  statusCode     Int?
  responseBody   Json?
  responseTimeMs Int?
  passed         Boolean @default(false)

  // LLM-generated plain-language explanation for failures (exciting req)
  failureExplanation String?

  createdAt DateTime @default(now())

  @@index([testSuiteId])
  @@index([endpointId])
  @@map("test_cases")
}

// ----------------------------------------------------------------------------
// RequestLog model — one captured request/response from the recording proxy.
// Unlike TestCase (a per-endpoint aggregate), this stores EVERY individual
// request the engine sent during a run, with the full request and response, so
// the user can inspect exactly what was sent and what came back. Endpoint is
// optional because a captured request may not map to a known spec path.
// ----------------------------------------------------------------------------
model RequestLog {
  id          String    @id @default(uuid())
  testSuiteId String
  testSuite   TestSuite @relation(fields: [testSuiteId], references: [id], onDelete: Cascade)
  endpointId  String?
  endpoint    Endpoint? @relation(fields: [endpointId], references: [id], onDelete: SetNull)

  seq        Int // order the request was sent within the run
  method     String
  path       String // concrete path the engine hit, e.g. /users/42
  url        String // full forwarded URL
  statusCode Int?
  durationMs Int?

  requestHeaders    Json?
  requestBody       String?
  requestTruncated  Boolean @default(false)
  responseHeaders   Json?
  responseBody      String?
  responseTruncated Boolean @default(false)

  createdAt DateTime @default(now())

  @@index([testSuiteId, endpointId])
  @@index([testSuiteId, statusCode])
  @@map("request_logs")
}
